--- a/free-wifi-android/res/layout/wifilist_activity.xml
+++ b/free-wifi-android/res/layout/wifilist_activity.xml
@@ -16,7 +16,7 @@
     android:orientation="horizontal" >
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/list1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" >
