--- a/free-wifi-android/res/layout/wifilist_activity.xml
+++ b/free-wifi-android/res/layout/wifilist_activity.xml
@@ -19,7 +19,8 @@
         android:id="@+id/list1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" >
+        android:layout_weight="1" 
+        android:descendantFocusability="blocksDescendants">
     </ListView>
 
 </LinearLayout> 
