--- a/free-wifi-android/res/layout/activity_main.xml
+++ b/free-wifi-android/res/layout/activity_main.xml
@@ -14,10 +14,11 @@
 
     <fragment
         android:id="@+id/listFragment"
+        android:layout_marginTop="0dp"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent"
-        android:layout_marginTop="?android:attr/actionBarSize"
+        
         class="app.freewifi.fragments.WiFiList" ></fragment>
 
     <fragment
