--- a/free-wifi-android/res/layout/rowlayout.xml
+++ b/free-wifi-android/res/layout/rowlayout.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
         android:contentDescription="TODO"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/x_1_72_hdpi" />
 
     <TextView
         android:id="@+id/status"
