--- a/free-wifi-android/res/layout/fragment_detail.xml
+++ b/free-wifi-android/res/layout/fragment_detail.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d2d2d2"
     android:orientation="vertical" >
 
     <TextView
