[android] add detail base panel

--- a/free-wifi-android/res/layout/fragment_detail.xml
+++ b/free-wifi-android/res/layout/fragment_detail.xml
@@ -1,18 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/app.freewifi"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#d2d2d2"
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/detailsText"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_marginTop="20dip"
-        android:text="Default Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="30dip" />
+        android:text="WiFi Name"
+        android:textSize="30sp" />
 
-</LinearLayout> 
+    <ImageView
+        android:id="@+id/signal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:contentDescription="@string/signal_image_description"
+        android:src="@drawable/x_1_72_hdpi" />
+
+    <EditText
+        android:id="@+id/pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:ems="10"
+        android:inputType="textPassword" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/connect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_column="0"
+        app:layout_row="0"
+        android:text="@string/connect_button" />
+
+</LinearLayout>
