--- a/free-wifi-android/res/layout/wifilist_activity.xml
+++ b/free-wifi-android/res/layout/wifilist_activity.xml
@@ -13,14 +13,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingLeft="10dp" >
 
     <ListView
         android:id="@+id/list1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" 
-        android:descendantFocusability="blocksDescendants">
+        android:descendantFocusability="blocksDescendants" >
+
     </ListView>
 
 </LinearLayout> 
