--- a/free-wifi-android/res/layout/fragment_detail.xml
+++ b/free-wifi-android/res/layout/fragment_detail.xml
@@ -6,39 +6,68 @@
     android:background="#d2d2d2"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:text="WiFi Name"
-        android:textSize="30sp" />
-
-    <ImageView
-        android:id="@+id/signal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:contentDescription="@string/signal_image_description"
-        android:src="@drawable/x_1_72_hdpi" />
-
-    <EditText
-        android:id="@+id/pass"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:ems="10"
-        android:inputType="textPassword" >
+        android:layout_height="match_parent" >
 
-        <requestFocus />
-    </EditText>
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="28dp"
+            android:textSize="24sp"
+            android:text="WiFiName" />
 
-    <Button
-        android:id="@+id/connect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_column="0"
-        app:layout_row="0"
-        android:text="@string/connect_button" />
+        <ImageView
+            android:id="@+id/signal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/name"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/x_1_72_hdpi" />
+
+        <EditText
+            android:id="@+id/pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/signal"
+            android:layout_centerHorizontal="true"
+            android:hint="@string/Password"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <Button
+            android:id="@+id/button_connect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/pass"
+            android:layout_alignRight="@+id/pass"
+            android:layout_below="@+id/pass"
+            android:text="@string/connect_button" />
+
+        <CheckBox
+            android:id="@+id/share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/button_connect"
+            android:layout_alignRight="@+id/button_connect"
+            android:layout_below="@+id/button_connect"
+            android:layout_marginTop="30dp"
+            android:textSize="16sp"
+            android:text="@string/share" />
+
+        <Button
+            android:id="@+id/forget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/share"
+            android:layout_alignRight="@+id/share"
+            android:layout_below="@+id/share"
+            android:text="@string/forget" />
+
+    </RelativeLayout>
 
 </LinearLayout>
