--- a/free-wifi-android/res/layout/rowlayout.xml
+++ b/free-wifi-android/res/layout/rowlayout.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dip" >
+    android:padding="10dip"
+    android:background="?android:attr/activatedBackgroundIndicator">
 
     <ImageView
         android:id="@+id/wifiicon"
@@ -10,7 +11,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="6dip"
+        android:layout_marginRight="0dip"
         android:contentDescription="TODO"
         android:src="@drawable/x_1_72_hdpi" />
 
