--- a/free-wifi-android/res/layout/fragment_detail.xml
+++ b/free-wifi-android/res/layout/fragment_detail.xml
@@ -65,6 +65,7 @@
 
         <ImageView
             android:id="@+id/signal"
+            android:contentDescription="@string/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
@@ -75,6 +76,7 @@
 
         <ImageView
             android:id="@+id/emblem"
+            android:contentDescription="@string/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/forget"
