--- a/free-wifi-android/res/layout/rowlayout.xml
+++ b/free-wifi-android/res/layout/rowlayout.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/description"
         android:src="@drawable/x_1_72_hdpi" />
 
     <TextView
@@ -23,7 +23,7 @@
         android:layout_toLeftOf="@+id/wifiicon"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:text="Status"
+        android:text="@string/status_text"
         android:textSize="12sp" />
 
     <TextView
@@ -35,7 +35,7 @@
         android:layout_alignRight="@+id/status"
         android:layout_alignWithParentIfMissing="true"
         android:gravity="center_vertical"
-        android:text="WiFi name"
+        android:text="@string/wifi_name"
         android:textSize="16sp" />
 
 </RelativeLayout>
