--- a/free-wifi-android/res/drawable/row_selector.xml
+++ b/free-wifi-android/res/drawable/row_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" android:drawable="@android:color/black" />
-    <item android:state_selected="true" android:drawable="@android:color/darker_gray" />
-    <item android:drawable="@android:color/white" />
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android">  
+   <item android:state_activated="true" android:drawable="@color/OrangeLight" />
+   <item android:state_checked="true" android:drawable="@color/OrangeDark" />
+   <item android:state_pressed="true" android:drawable="@color/OrangeDark" />
+   <item android:drawable="@color/OrangeDark" />  
 </selector>
