--- a/free-wifi-android/res/layout/rowlayout.xml
+++ b/free-wifi-android/res/layout/rowlayout.xml
@@ -2,7 +2,8 @@
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:padding="10dip"
-    android:background="?android:attr/activatedBackgroundIndicator">
+    style="ListTheme">
+    
 
     <ImageView
         android:id="@+id/wifiicon"
