--- a/free-wifi-android/res/layout/wifilist_activity.xml
+++ b/free-wifi-android/res/layout/wifilist_activity.xml
@@ -14,7 +14,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal"
-    android:paddingLeft="0dp" >
+    android:paddingLeft="0dp"
+    android:background="@color/list_gray"
+    style="ListTheme">
 
     <ListView
         android:id="@+id/list1"
