--- a/free-wifi-android/res/layout/fragment_detail.xml
+++ b/free-wifi-android/res/layout/fragment_detail.xml
@@ -60,7 +60,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="29dp"
             android:text="@string/choose_wifi"
-            android:textSize="24sp" />
+            android:textSize="36sp" />
 
         <ImageView
             android:id="@+id/signal"
@@ -70,17 +70,16 @@
             android:layout_below="@+id/name"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="26dp"
-            android:src="@drawable/x_1_72_hdpi"
+            android:src="@drawable/blue_1"
             android:visibility="gone"  />
 
         <ImageView
             android:id="@+id/emblem"
-            android:contentDescription="@string/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/forget"
+            android:layout_below="@+id/share"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:contentDescription="@string/description"
             android:src="@drawable/walnut" />
 
     </RelativeLayout>
