--- a/free-wifi-android/res/layout/fragment_detail.xml
+++ b/free-wifi-android/res/layout/fragment_detail.xml
@@ -28,7 +28,7 @@
             android:layout_alignRight="@+id/pass"
             android:layout_below="@+id/pass"
             android:text="@string/connect_button"
-            android:visibility="gone"/>
+            android:visibility="invisible" />
 
         <CheckBox
             android:id="@+id/share"
@@ -41,7 +41,7 @@
             android:text="@string/share"
             android:checked="true"
             android:textSize="16sp" 
-            android:visibility="gone"/>
+            android:visibility="invisible" />
 
         <Button
             android:id="@+id/forget"
@@ -51,30 +51,12 @@
             android:layout_alignRight="@+id/share"
             android:layout_below="@+id/share"
             android:text="@string/forget"
-            android:visibility="gone"/>
+            android:visibility="invisible" />
 
-        <ImageView
-            android:id="@+id/emblem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/share"
-            android:layout_centerHorizontal="true"
-            android:contentDescription="@string/description"
-            android:src="@drawable/walnut" 
-            android:visibility="gone"/>
+
 
         <TextView
-            android:id="@+id/wifi_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/pass"
-            android:layout_marginTop="88dp"
-            android:text="@string/choose_wifi"
-            android:textSize="36sp" />
-
-        <TextView
-            android:id="@+id/description"
+            android:id="@+id/description_wifi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/wifi_name"
@@ -88,12 +70,22 @@
             android:id="@+id/signal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/description"
+            android:layout_below="@+id/description_wifi"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="23dp"
             android:contentDescription="@string/description"
             android:src="@drawable/blue_1"
             android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/wifi_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="71dp"
+            android:text="@string/choose_wifi"
+            android:textSize="36sp" />
 
     </RelativeLayout>
 
